// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event resources fetchEvents should format option value to snake_case 1`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {
        "order_by": "created_datetime:asc",
      },
      "paramsSerializer": {
        "indexes": null,
      },
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/events/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`event resources fetchEvents should resolve with an Event list on success 1`] = `
{
  "config": {
    "allowAbsoluteUrls": true,
    "data": undefined,
    "env": {
      "Blob": [Function],
      "FormData": [Function],
    },
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "get",
    "params": {},
    "paramsSerializer": {
      "indexes": null,
    },
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "transitional": {
      "clarifyTimeoutError": false,
      "forcedJSONParsing": true,
      "legacyInterceptorReqResOrdering": true,
      "silentJSONParsing": true,
    },
    "url": "/api/events/",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": {
    "data": [
      {
        "context": "f8cb5ba6-a235-4353-8900-24a3354beee9",
        "created_datetime": "2022-01-25T10:39:21.892050+00:00",
        "data": null,
        "id": 1,
        "object_id": 10,
        "object_type": "Ticket",
        "type": "ticket-customer-updated",
        "uri": "/api/events/1/",
        "user_id": 1,
      },
      {
        "context": "3c3fd1c2-ef5c-4c2e-b56b-3471a04fb21c",
        "created_datetime": "2022-01-25T10:39:21.892050+00:00",
        "data": null,
        "id": 2,
        "object_id": 20,
        "object_type": "Macro",
        "type": "macro-created",
        "uri": "/api/events/2/",
        "user_id": 1,
      },
      {
        "context": "4fe8a0b3-7185-40f9-9442-07c291d669c0",
        "created_datetime": "2022-01-25T10:39:21.892050+00:00",
        "data": null,
        "id": 3,
        "object_id": 30,
        "object_type": "View",
        "type": "view-deleted",
        "uri": "/api/events/3/",
        "user_id": 1,
      },
    ],
    "meta": {
      "next_cursor": "WyJuZXh0IiwgIjIwMjItMDEtMjRUMTM6MTE6NDQuODEyNzE3IiwgMTEwMF0=",
      "prev_cursor": null,
      "total_resources": null,
    },
  },
  "headers": {},
  "request": {
    "responseURL": "/api/events/",
  },
  "status": 200,
}
`;
